--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Yash E-commerce Store</title>
+    <title>About Us  Yash E-commerce Store</title>
     <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
